# justsendmail

./: .gitignore  Pipfile  README.md  flake.nix  justsendmail.py  mail.py  mypy.ini  pyproject.toml  secmail.py  sendmyl.py  setup.py  version.txt
.github/workflows/: lint.yaml  pypi.yaml
justsendmail/: __init__.py  mail.py
