[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "justsendmail"
authors = [
  { name = "Philipp Schmitt", email = "philipp@schmitt.co" },
]
description = "Simple lib to send mail"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "myl-discovery >= 0.6.0.dev0",
  "rich >= 13.0.0, <14.0.0",
  "rich-argparse >= 1.5.0, <2.0.0",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "version.txt"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/pschmitt/justsendmail"
Documentation = "https://github.com/pschmitt/justsendmail/blob/HEAD/README.md"
Repository = "https://github.com/pschmitt/justsendmail"
Issues = "https://github.com/pschmitt/justsendmail/issues"

[project.scripts]
justsendmail = "justsendmail:main"
sendmyl = "justsendmail:main"

[project.optional-dependencies]
dev = [
  "black",
  "pyinstaller",
  "mypy"
]

[tool.black]
line-length = 79
